Update to simplify variables and update XNAT and plugins (#8)
* Simply arguments settig. Apply default environment variable CATALINA_OPTS

* Ignore local build log files

* Set XNAT_HOME env variable

* Upgrade XNAT version to 1.8.10